--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -253,13 +253,20 @@ ul{
         background: $base_background;
         height: 100%;
         overflow: scroll;
-        padding: 1rem 0.5rem;
+        padding: 1rem 2rem;
         // logo
         &__photo{
-            $size: 2rem;
+            $size: 50%;
             border-radius: 50%;
             width: $size;
             height: $size;
+            margin: auto;
+        }
+        &__img_tag{
+            width: 100% !important;
+            height: 100% !important;
+            border-radius: 50%;
+            object-fit: cover;
         }
         // name: big text
         &__header{
@@ -267,10 +274,23 @@ ul{
             color: #fff;
             font-weight: 700;
         }
+        &__subheader{
+            font-size: $font_subheader;
+            font-weight: 600;
+            color: $icon_color;
+        }
         // description
         &__description{
             color: $icon_color;
             font-size: $font_base;
+        }
+        // Wrapper for section
+        &__wrapper{
+            margin: 0 auto 2rem auto;
+            text-align: center;
+            &__item{
+                margin: 1rem auto;
+            }
         }
         // Label
         &__label{
@@ -280,6 +300,7 @@ ul{
         // contacts: email, phone, address
         &__base{
             color: #fff;
+            margin: .5rem 0;
             font-size: $font_base;
         }
     }
@@ -293,10 +314,12 @@ ul{
             display: flex;
             flex-flow: row nowrap;
             justify-content: space-between;
-            width: auto;
+            width: inherit;
         }
         &__input_tag{
-            width: fit-content;
+            width: 100%;
+            padding: .25rem 0;
+            border-radius: .5rem2;
             background: transparent;
             border: none;
             padding: .5rem .25rem;
